# eigen-gurobi

./: .gitignore  CMakeLists.txt  FindGUROBI.cmake  README.md
cmake/: EigenGurobiDependencies.cmake  EigenGurobiDownloadExternal.cmake
doc/: Doxyfile.extra.in
src/: CMakeLists.txt  Gurobi.cpp  Gurobi.h
tests/: CMakeLists.txt  QPTest.cpp
