set(SOURCES Gurobi.cpp)
set(HEADERS eigen_gurobi_api.h Gurobi.h)

add_library(${PROJECT_NAME} STATIC ${SOURCES} ${HEADERS})
foreach(GUROBI_LIBRARY ${GUROBI_LIBRARIES})
  message(">>>> Linking eigen-gurobi against " ${GUROBI_LIBRARY})
  target_link_libraries(${PROJECT_NAME} ${GUROBI_LIBRARY})
endforeach()

set(INSTALL_PATH include/${PROJECT_NAME})
install(FILES ${HEADERS} DESTINATION ${INSTALL_PATH})
install(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
